src/components/blocks/search-sidebar-item/_search-sidebar-item.scss
.b-search-sidebar-item {
  box-sizing: border-box;
  display: inline-block;
  height: 256px;
  max-width: 256px;
  min-width: 200px;
  overflow: hidden;
  position: relative;
  text-align: center;

  &--short {
    height: 100px;
  }

  &__media {
    height: 100%;
    width: 100%;

    &:after {
      background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, .8), rgba(0, 0, 0, 1));
      bottom: 0;
      content: '';
      display: block;
      left: 0;
      opacity: .8;
      position: absolute;
      right: 0;
      top: 0;
      transition: opacity .35s ease;
      width: 100%;
      z-index: 0;

    }
  }

  &__media-image {
    height: 100%;
    object-fit: cover;
    width: 100%;
  }

  &__content {
    margin: 10px 0 10px 10px;
    position: absolute;
    text-align: left;
    top: 0;

    .b-search-sidebar-item--short & {
      bottom: auto;
      position: relative;
      top: auto;
    }
  }
}

.b-search-sidebar-item__content-icon {
  color: #ffffff;
  display: inline-block;
  max-height: 70.3px;
  max-width: 122px;
}

.b-search-sidebar-item__content-text {
  @include typeSetting(5, normal);
  color: white;
  display: inline-block;
  position: relative;
  text-shadow: 0 1px 2px rgba(0, 0, 0, .5);

  .b-search-sidebar-item--short & {
    bottom: 14px;
    left: 0;
    line-height: 1.25;
    position: absolute;
    text-align: left;
    top: auto;
  }
}

